==> carl-tud/RIOT/cpu/kinetis/periph/timer.c <==
#include <stdlib.h>
#include "bit.h"
#include "bitarithm.h"
#include "board.h"
#include "cpu.h"
#include "macros/utils.h"
#include "periph/timer.h"
#include "periph_conf.h"
#define KINETIS_PIT_COMBINED_IRQ 1
#define KINETIS_PIT_COMBINED_IRQ 0
#include "debug.h"
#define PIT_MAX_VALUE     (PIT_LDVAL_TSV_MASK >> PIT_LDVAL_TSV_SHIFT)
#define LPTMR_MAX_VALUE   (LPTMR_CNR_COUNTER_MASK >> LPTMR_CNR_COUNTER_SHIFT)
#define KINETIS_BOARD_HAVE_CONFIGURED_LPTMR
#define LPTMR_RELOAD_OVERHEAD 1

uint32_t timer_query_freqs(tim_t dev, uword_t index)
{
    assert(dev < TIMER_NUMOF);

    switch (_timer_variant(dev)) {
    case TIMER_PIT:
        if (index == UINT32_MAX) {
            return 0;
        }
        return PIT_BASECLOCK / (index + 1);
#ifdef KINETIS_BOARD_HAVE_CONFIGURED_LPTMR
    case TIMER_LPTMR:
        if (index >= 17) {
            return 0;
        }

        return lptmr_config[_lptmr_index(dev)].base_freq >> index;
#endif
    default:
        assert(0);
        return 0;
    }
}

int timer_init(tim_t dev, uint32_t freq, timer_cb_t cb, void *arg)
{
    if ((unsigned int)dev >= TIMER_NUMOF) {
        /* invalid timer */
        return -1;
    }
    /* demultiplex to handle two types of hardware timers */
    switch (_timer_variant(dev)) {
        case TIMER_PIT:
            return pit_init(_pit_index(dev), freq, cb, arg);
#ifdef KINETIS_BOARD_HAVE_CONFIGURED_LPTMR
        case TIMER_LPTMR:
            return lptmr_init(_lptmr_index(dev), freq, cb, arg);
#endif
        default:
            return -1;
    }
}

int timer_set(tim_t dev, int channel, unsigned int timeout)
{
    if (channel != 0) {
        /* only one channel is supported */
        return -1;
    }
    if ((unsigned int)dev >= TIMER_NUMOF) {
        /* invalid timer */
        return -1;
    }
    /* demultiplex to handle two types of hardware timers */
    switch (_timer_variant(dev)) {
        case TIMER_PIT:
            return pit_set(_pit_index(dev), timeout);
#ifdef KINETIS_BOARD_HAVE_CONFIGURED_LPTMR
        case TIMER_LPTMR:
            return lptmr_set(_lptmr_index(dev), timeout);
#endif
        default:
            return -1;
    }
}

int timer_set_absolute(tim_t dev, int channel, unsigned int target)
{
    if (channel != 0) {
        /* only one channel is supported */
        return -1;
    }
    if ((unsigned int)dev >= TIMER_NUMOF) {
        /* invalid timer */
        return -1;
    }
    /* demultiplex to handle two types of hardware timers */
    switch (_timer_variant(dev)) {
        case TIMER_PIT:
            return pit_set_absolute(_pit_index(dev), target);
#ifdef KINETIS_BOARD_HAVE_CONFIGURED_LPTMR
        case TIMER_LPTMR:
            return lptmr_set_absolute(_lptmr_index(dev), target);
#endif
        default:
            return -1;
    }

    return 0;
}

int timer_clear(tim_t dev, int channel)
{
    if (channel != 0) {
        /* only one channel is supported */
        return -1;
    }
    if ((unsigned int)dev >= TIMER_NUMOF) {
        /* invalid timer */
        return -1;
    }
    /* demultiplex to handle two types of hardware timers */
    switch (_timer_variant(dev)) {
        case TIMER_PIT:
            return pit_clear(_pit_index(dev));
#ifdef KINETIS_BOARD_HAVE_CONFIGURED_LPTMR
        case TIMER_LPTMR:
            return lptmr_clear(_lptmr_index(dev));
#endif
        default:
            return -1;
    }

    return 0;
}
